add namespace table

--- a/main.html
+++ b/main.html
@@ -21,7 +21,15 @@
         </tr>
       </table>
     </div>
+    <div class="namespace">
+      <p>namespace</p>
+      <table id="namespaceTable" border="1">
+        <tr>
+          <th>name</th>
+        </tr>
+      </table>
 
+    </div>
     <div class="mosaicQuantity">
       <p>Enter address:</p>
       <input type="text" id="address" size="70">
