add getAddress div

--- a/main.html
+++ b/main.html
@@ -21,19 +21,23 @@
         </tr>
       </table>
     </div>
+
+  <div class="getAddress">
+    <p>Enter address:</p>
+    <input type="text" id="address" size="70">
+    <input type="button" id="btn1" value="Submit">
+  </div>
+
     <div class="namespace">
-      <p>namespace</p>
       <table id="namespaceTable" border="1">
         <tr>
-          <th>name</th>
+          <th>namespace</th>
         </tr>
       </table>
 
     </div>
+
     <div class="mosaicQuantity">
-      <p>Enter address:</p>
-      <input type="text" id="address" size="70">
-      <input type="button" id="btn1" value="Submit">
       <table id="mosaicQuantityTable" border="1">
         <tr>
           <th>mosaic name</th>
@@ -41,6 +45,7 @@
         </tr>
       </table>
     </div>
+
     <div class="mosaicTx">
       <table id="mosaicTxTable" border="1">
         <tr>
