add table header, created at

--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@
       <table id="namespaceTable" border="1">
         <tr>
           <th>namespace</th>
+          <th>created at</th>
         </tr>
       </table>
 
