delete created at column from namespace table

--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>nem info</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="nem-sdk.js"></script>
     <script type="text/javascript" src="script.js"></script>
     <noscript>
@@ -32,7 +33,6 @@
       <table id="namespaceTable" border="1">
         <tr>
           <th>namespace</th>
-          <th>created at</th>
         </tr>
       </table>
 
