change the way to create table

--- a/main.html
+++ b/main.html
@@ -23,18 +23,24 @@
       </table>
     </div>
 
-  <div class="getAddress">
-    <p>Enter address:</p>
-    <input type="text" id="address" size="70">
-    <input type="button" id="btn1" value="Submit">
-  </div>
+    <div class="getAddress">
+      <p>Enter address:</p>
+      <input type="text" id="address" size="70">
+      <input type="button" id="btn1" value="Submit">
+    </div>
 
-    <div class="namespace">
-      <table id="namespaceTable" border="1">
+    <div id="addressList">
+      <ul id="addressList">
+
+      </ul>
+    </div>
+
+    <div id="namespace">
+      <!-- <table id="namespaceTable" border="1">
         <tr>
           <th>namespace</th>
         </tr>
-      </table>
+      </table> -->
 
     </div>
 
