Add createTable function to all tables

--- a/main.html
+++ b/main.html
@@ -36,32 +36,15 @@
     </div>
 
     <div id="namespace">
-      <!-- <table id="namespaceTable" border="1">
-        <tr>
-          <th>namespace</th>
-        </tr>
-      </table> -->
 
     </div>
 
-    <div class="mosaicQuantity">
-      <table id="mosaicQuantityTable" border="1">
-        <tr>
-          <th>mosaic name</th>
-          <th>amount</th>
-        </tr>
-      </table>
+    <div id="mosaicQuantity">
+
     </div>
 
-    <div class="mosaicTx">
-      <table id="mosaicTxTable" border="1">
-        <tr>
-          <th>time</th>
-          <th>mosaic name</th>
-          <th>type</th>
-          <th>quantity</th>
-        </tr>
-      </table>
+    <div id="mosaicTxTable">
+
     </div>
 
   </body>
