Add feature to show several address infomation

--- a/main.html
+++ b/main.html
@@ -35,16 +35,23 @@
       </ul>
     </div>
 
-    <div id="namespace">
-
-    </div>
-
-    <div id="mosaicQuantity">
-
-    </div>
-
-    <div id="mosaicTxTable">
-
+    <div id='tables'>
+      <div id='firstAddress' name='table'>
+        <p id=address></p>
+        <table id="namespace">
+          <th>namespace</th>
+        </table>
+        <table id="mosaicQuantity">
+          <th>mosaic name</th>
+          <th>quantity</th>
+        </table>
+        <table  id="mosaicTxTable">
+          <th>time</th>
+          <th>mosaic name</th>
+          <th>type</th>
+          <th>quantity</th>
+        </table>
+      </div>
     </div>
 
   </body>
