Prevent to show same address

--- a/main.html
+++ b/main.html
@@ -29,12 +29,10 @@
       <input type="button" id="btn1" value="Submit">
     </div>
 
-    <div id="addressList">
-      <ul id="addressList">
-
-      </ul>
+    <div>
+      <ul id="addressList"></ul>
     </div>
-
+    
     <div id='tables'>
       <div id='firstAddress' name='table'>
         <p id=address></p>
