Add table header

--- a/main.html
+++ b/main.html
@@ -32,10 +32,10 @@
     <div>
       <ul id="addressList"></ul>
     </div>
-    
+
     <div id='tables'>
       <div id='firstAddress' name='table'>
-        <p id=address></p>
+        <h3 id='tableHead'></h3>
         <table id="namespace">
           <th>namespace</th>
         </table>
